--- a/products-trade/less/products-page/pages/_products-landing.less
+++ b/products-trade/less/products-page/pages/_products-landing.less
@@ -92,7 +92,7 @@
 				border: 1px solid @latest-releases-thumbnail-border;
 				margin-bottom: 18px;
 				overflow: hidden;
-				z-index: 10;
+				z-index: 2;
 				position: relative;
 				img{
 					.transform(scale(1));
